# PySceneDetect

./: .dockerignore  .gitignore  .readthedocs.yaml  .style.yapf  .travis.yml  .version_info  404.html  CHANGELOG.md  CITATION.cff  CNAME  Dockerfile  LICENSE  LICENSE-MKVMERGE  LICENSE-NUMPY  LICENSE-OPENCV  LICENSE-PYTEST  MANIFEST.in  README.md  RELEASE-PLAN.md  THIRD-PARTY.md  USAGE.md  api_test.py  appveyor.yml  appveyor_no_installer.yml  appveyor_with_installer.yml  index.html  mkdocs.yml  package-info.rst  push-resources.sh  pyproject.toml  requirements.txt  requirements_headless.txt  scenedetect.cfg  scenedetect.py  scenedetect.spec  search.html  setup.cfg  setup.py  sitemap.xml  style.css
.github/ISSUE_TEMPLATE/: blank-issue-template.md  blank-template.md  bug-or-issue-report.md  bug-report.md  feature-or-enhancement-request.md  feature-request-or-idea-submission.md  feature.md  scenedetect_app.md  scenedetect_package.md
.github/workflows/: build-linux.yml  build-windows-portable.yml  build-windows.yml  build.yml  check-code-format.yml  check-docs.yml  codeql.yml  dependency-review.yml  docker-publish.yml  generate-docs.yml  generate-site.yml  generate-website.yml  publish-pypi.yml  release-test.yml  release.yml  run-windows.yml  static-analysis.yml  test-installer.yml
api/: index.html
benchmark/: README.md  SWEEP_REPORT.md  __main__.py  _common.py  analyze_sweep.py  autoshot_dataset.py  bbc_dataset.py  dataset.py  evaluator.py  report_sweep.py  sweep.py
benchmarks/: README.md  autoshot_dataset.py  bbc_dataset.py  benchmark.py  evaluate.py  evaluator.py  index.html
benchmarks-albanie/: README.md  download_script.py
changelog/: index.html
cli/: index.html
contributing/: index.html
copyright/: index.html
docs/: .buildinfo  .readthedocs.yaml  api.rst  changelog.md  cli.rst  conf.py  contributing.md  copyright.md  download.md  examples.md  faq.md  features.md  generate_cli_docs.py  index.html  index.md  index.rst  mkdocs.yml  py-modindex.html  requirements.txt  searchindex.js  supporting.md  video_splitting.md
docs-api/: Makefile  conf.py  index.rst  make.bat
docs-api/scenedetect/: detectors.rst  frame_timecode.rst  scene_manager.rst  stats_manager.rst  video_manager.rst
docs/.doctrees/: api.doctree  environment.pickle
docs/0.6.1/: api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html
docs/0.6.2/: .buildinfo  api.html  cli.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/0.6.3/: .buildinfo  api.html  cli.html  genindex.html
docs/0.6.4/: .buildinfo  index.html  objects.inv  py-modindex.html  search.html
docs/0.6.5/: api.html  cli.html  genindex.html  index.html  search.html  searchindex.js
docs/0.6.6/: .buildinfo  cli.html  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs/0.6.7/: .buildinfo  api.html  cli.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/0.7/: .buildinfo  api.html  cli.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/0.7.1/: api.html  cli.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_static/: alabaster.css
docs/_templates/: navigation.html
docs/api/: backends.html  backends.rst  detectors.html  detectors.rst  frame_timecode.html  frame_timecode.rst  migration_guide.rst  output.rst  platform.html  platform.rst  scene_manager.rst  stats_manager.rst  video_splitter.html  video_stream.html
docs/cli/: backends.rst  commands.html  commands.rst  config_file.html  config_file.rst  detectors.rst  global_options.rst
docs/develop/: .buildinfo  api.html  cli.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/examples/: usage-example.md  usage-python.md  usage.md  video-splitting.md
docs/head/: .buildinfo  api.html  cli.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/latest/: .buildinfo  api.html  cli.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/other/: copyright.md  literature.md  resources.md  similar.md
docs/reference/: command-line-params.md  command-line.md  config.md  creating-new-scene-detectors.md  detection-methods.md  python-api.md  python-usage.md
download/: index.html
faq/: index.html
features/: index.html
issue/: index.html
issues/: index.html
literature/: index.html
manual/: .readthedocs.yaml  api.rst  conf.py  index.rst  requirements.txt
packaging/: build_all.py  build_headless.py  package-info.rst
scenedetect/: __init__.py  __main__.py  _fan_out.py  _scene_loader.py  cli.py  cli_context.py  common.py  config.json  config.py  detector.py  detectors.py  frame_timecode.py  manager.py  platform.py  scene_detector.py  scene_detectors.py  scene_manager.py  scene_result.py  scenedetect-gui.py  simpletable.py  stats_manager.py  time.py  timecode.py  timecodes.py  video_manager.py  video_manager_async.py  video_splitter.py  video_stream.py
scripts/: _release_common.py  benchmark_defaults.sh  benchmark_sweep.sh  bump_installer.py  diag_vfr.py  finalize_windows_dist.py  generate_assets.py  generate_goldens.py  generate_manifest.py  pre_release.py  stage_windows_dist.py  update_copyright.py  update_installer.py  validate_release.py
search/: search_index.json
similar/: index.html
supporting/: index.html
tests/: __init__.py  api_test.py  conftest.py  helpers.py  test_api.py  test_backend_moviepy.py  test_backend_opencv.py  test_backend_pyav.py  test_backwards_compat.py  test_benchmark_evaluator.py  test_cli.py  test_concat.py  test_detectors.py  test_fan_out.py  test_frame_timecode.py  test_labels.py  test_output.py  test_platform.py  test_scene_manager.py  test_stats_manager.py  test_timecode.py  test_vfr.py  test_video_manager.py  test_video_splitter.py  test_video_stream.py  testvideo-results.txt  testvideo_output.txt  testvideo_scenes.csv
website/: mkdocs.yml  requirements.txt
(+533 files in other folders)
