#
#         PySceneDetect: Python-Based Video Scene Detector
#   ---------------------------------------------------------------
#     [  Site: http://www.bcastell.com/projects/PySceneDetect/   ]
#     [  Github: https://github.com/Breakthrough/PySceneDetect/  ]
#     [  Documentation: http://www.scenedetect.com/docs/         ]
#
# Copyright (C) 2014 Brandon Castellano <http://www.bcastell.com>.
#

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # ruff-native checks
    "RUF",
]
ignore = [
    # TODO: Audit re-exports in __init__.py files. Add `__all__` (note: must be kept in sync as
    # new public symbols are added) or use redundant-alias form (`from x import Y as Y`).
    "F401",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Vendored third-party code: don't rewrite/modernize upstream source.
"scenedetect/_thirdparty/*" = ["UP"]
# CLI help text and validation messages are intentionally long.
"scenedetect/_cli/*" = ["E501"]
# Test data tables and golden output strings are clearer unwrapped.
"tests/*" = ["E501"]
# Doc generators and benchmark scripts mirror the CLI strings.
"docs/*" = ["E501"]
"benchmark/*" = ["E501"]

[tool.pyright]
include = ["scenedetect", "tests"]
exclude = [
    # Pyright built-in defaults
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    ".venv",
    # Vendored third-party code
    "scenedetect/_thirdparty",
]

# Modes: "off" | "basic" | "standard" | "strict". The 0.7 codebase is clean
# at "basic". When tightening to "standard" or "strict" in the future, the
# cv2 / av / numpy / moviepy noise rules (reportUnknown*, reportMissingTypeStubs)
# will likely need to be re-added with "none" or scoped per-file.
typeCheckingMode = "basic"
