#
#         PySceneDetect: Python-Based Video Scene Detector
#   ---------------------------------------------------------------
#     [  Site: http://www.bcastell.com/projects/PySceneDetect/   ]
#     [  Github: https://github.com/Breakthrough/PySceneDetect/  ]
#     [  Documentation: http://www.scenedetect.com/docs/         ]
#
# Copyright (C) 2014 Brandon Castellano <http://www.bcastell.com>.
#

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scenedetect"
dynamic = ["version"]
description = "Video scene cut/shot detection program and Python library."
readme = { file = "packaging/package-info.rst", content-type = "text/x-rst" }
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10"
authors = [{ name = "Brandon Castellano", email = "brandon248@gmail.com" }]
keywords = ["video", "computer-vision", "analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",
    "Topic :: Utilities",
]
dependencies = [
    # click 8.3.0 is excluded as per https://scenedetect.com/issues/521
    "click~=8.0,<8.3.0",
    "numpy",
    "opencv-python",
    "platformdirs",
    "tqdm",
]

[project.optional-dependencies]
pyav = ["av>=9.2"]
moviepy = ["moviepy"]
dev = ["av>=9.2", "moviepy", "pytest>=7.0"]
docs = ["Sphinx==7.0.1"]
website = ["mkdocs==1.5.2", "jinja2>=3.1.6"]

[project.urls]
Homepage = "https://www.scenedetect.com"
Repository = "https://github.com/Breakthrough/PySceneDetect/"
Documentation = "https://www.scenedetect.com/docs/"
"Bug Tracker" = "https://github.com/Breakthrough/PySceneDetect/issues/"

[project.scripts]
scenedetect = "scenedetect.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["scenedetect*"]

[tool.setuptools.dynamic]
version = { attr = "scenedetect.__version__" }

[tool.pytest.ini_options]
markers = [
    "release: opt-in release-validation tests; excluded by default (run with `pytest -m release`)",
]
addopts = "-m 'not release'"
filterwarnings = [
    "ignore:TODO.*Update caller to handle VFR:UserWarning",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # ruff-native checks
    "RUF",
]
ignore = [
    # TODO: Audit re-exports in __init__.py files. Add `__all__` (note: must be kept in sync as
    # new public symbols are added) or use redundant-alias form (`from x import Y as Y`).
    "F401",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Vendored third-party code: don't rewrite/modernize upstream source.
"scenedetect/_thirdparty/*" = ["UP"]
# CLI help text and validation messages are intentionally long.
"scenedetect/_cli/*" = ["E501"]
# Test data tables and golden output strings are clearer unwrapped.
"tests/*" = ["E501"]
# Doc generators and benchmark scripts mirror the CLI strings.
"docs/*" = ["E501"]
"benchmark/*" = ["E501"]

[tool.pyright]
include = ["scenedetect", "tests"]
exclude = [
    # Pyright built-in defaults
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    ".venv",
    # Vendored third-party code
    "scenedetect/_thirdparty",
    # Release tests pull in extra deps (opentimelineio, psutil) that aren't in [dev]
    "tests/release",
]

# Modes: "off" | "basic" | "standard" | "strict". The 0.7 codebase is clean
# at "basic". When tightening to "standard" or "strict" in the future, the
# cv2 / av / numpy / moviepy noise rules (reportUnknown*, reportMissingTypeStubs)
# will likely need to be re-added with "none" or scoped per-file.
typeCheckingMode = "basic"

# Analyze against the minimum supported Python so 3.11+-only APIs get flagged
# regardless of which interpreter runs pyright.
pythonVersion = "3.10"
