
[metadata]
name = scenedetect
version = attr: scenedetect.__version__
license = BSD 3-Clause License
author = Brandon Castellano
author_email = brandon248@gmail.com
description = Video scene cut/shot detection program and Python library.
long_description = file: dist/package-info.rst
long_description_content_type = text/x-rst
url = https://scenedetect.com/
project_urls =
    Homepage = https://scenedetect.com/
    Repository = https://github.com/Breakthrough/PySceneDetect
    Documentation = https://manual.scenedetect.com/
    Bug Tracker = https://github.com/Breakthrough/PySceneDetect/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Console :: Curses
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Video :: Conversion
    Topic :: Multimedia :: Video :: Non-Linear Editor
    Topic :: Utilities
keywords = video computer-vision analysis

[options]
install_requires =
    Click
    numpy
    tqdm
    appdirs

packages =
    scenedetect
    scenedetect.backends
    scenedetect.cli
    scenedetect.detectors
    scenedetect.thirdparty
python_requires = >=3.6

[options.extras_require]
opencv = opencv-python
opencv-headless = opencv-python-headless
pyav = av

[options.entry_points]
console_scripts =
    scenedetect = scenedetect.__main__:main

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
python_files = tests/*.py
