
[metadata]
name = scenedetect
version = attr: scenedetect.__version__
license = BSD 3-Clause License
author = Brandon Castellano
author_email = brandon248@gmail.com
description = Video scene cut/shot detection program and Python library.
long_description = file: dist/package-info.rst
long_description_content_type = text/x-rst
url = https://www.scenedetect.com
project_urls =
    Homepage = https://www.scenedetect.com
    Repository = https://github.com/Breakthrough/PySceneDetect/
    Documentation = https://www.scenedetect.com/docs/
    Bug Tracker = https://github.com/Breakthrough/PySceneDetect/issues/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Console :: Curses
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Video :: Conversion
    Topic :: Multimedia :: Video :: Non-Linear Editor
    Topic :: Utilities
keywords = video computer-vision analysis

[options]
install_requires =
    Click
    numpy
    platformdirs
    tqdm
packages =
    scenedetect
    scenedetect._cli
    scenedetect._thirdparty
    scenedetect.backends
    scenedetect.detectors
python_requires = >=3.7

[options.extras_require]
opencv = opencv-python
opencv-headless = opencv-python-headless
pyav = av
moviepy = moviepy

[options.entry_points]
console_scripts =
    scenedetect = scenedetect.__main__:main

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
python_files = tests/*.py
