
[metadata]
name = scenedetect
version = attr: scenedetect.__version__
license = BSD-3-Clause
author = Brandon Castellano
author_email = brandon248@gmail.com
description = Video scene cut/shot detection program and Python library.
long_description = file: dist/package-info.rst
long_description_content_type = text/x-rst
url = https://www.scenedetect.com
project_urls =
    Homepage = https://www.scenedetect.com
    Repository = https://github.com/Breakthrough/PySceneDetect/
    Documentation = https://www.scenedetect.com/docs/
    Bug Tracker = https://github.com/Breakthrough/PySceneDetect/issues/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Console :: Curses
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Video :: Conversion
    Topic :: Multimedia :: Video :: Non-Linear Editor
    Topic :: Utilities
keywords = video computer-vision analysis

[options]
install_requires =
    # click <8.3.0 is excluded as per https://scenedetect.com/issues/521.
    click~=8.0,<8.3.0
    numpy
    platformdirs
    tqdm
packages =
    scenedetect
    scenedetect._cli
    scenedetect._thirdparty
    scenedetect.backends
    scenedetect.detectors
    scenedetect.output
python_requires = >=3.7

[options.extras_require]
opencv = opencv-python
opencv-headless = opencv-python-headless
pyav = av>=9.2
moviepy = moviepy

[options.entry_points]
console_scripts =
    scenedetect = scenedetect.__main__:main

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
python_files = tests/*.py
